<resources>
    <string name="app_name">StudentApp</string>
    <string name="sybca5">SYBCA5</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="todo">TODO</string>
    <string name="phone_no">Phone No</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="division">Division</string>
    <string name="roll_no">Roll No</string>
    <string name="area">Area</string>
    <string name="user_info">User Info</string>
    <string name="gender">Gender</string>
    <string name="goto_main">Goto Main</string>
</resources>