<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".Activities.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_info"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/Primary"
        android:gravity="center"
        android:layout_margin="22dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/FirstName"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_main"
        android:hint="@string/first_name"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LastName"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/last_name"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/email"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/BirtDate"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/birthdate"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/PhoneNo"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/phone_no"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Gender"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/gender"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Division"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/division"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Rno"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/roll_no"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Area"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main"
        android:hint="@string/area"
        android:paddingStart="17dp"
        android:paddingEnd="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Main"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/goto_main"
        android:textSize="18sp"
        app:cornerRadius="12dp"/>
</LinearLayout>